fixed hr alignment for large screens

--- a/css/codeup-design-project.css
+++ b/css/codeup-design-project.css
@@ -89,7 +89,6 @@ nav a {
 
     hr {
         width: 100%;
-        margin: 2em 6vw 5em;
         height: 0;
         border: 2px solid #dcdada;
     }
